// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs component renders correctly 1`] = `
<div>
  <div
    class="Tabs Tabs--primary"
  >
    <div
      class="TabsBar"
    >
      <div
        class="Container"
      >
        <div
          class="MuiContainer-root tabStyles-ContainerRoot-1 MuiContainer-maxWidthXl"
        >
          <div
            class="MuiTabs-root tabStyles-TabsRoot-2"
          >
            <div
              class="MuiTabs-scrollable"
              style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
            />
            <div
              class="MuiTabs-scroller MuiTabs-scrollable"
              style="margin-bottom: 0px;"
            >
              <div
                aria-label="tabs"
                class="MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="tabpanel-0"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary tabStyles-TabRoot-3 Mui-selected"
                  id="tab-0"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    Tab 1
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-controls="tabpanel-1"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary tabStyles-TabRoot-3"
                  id="tab-1"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    Tab 2
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
              <span
                class="PrivateTabIndicator-root-4 PrivateTabIndicator-colorPrimary-5 MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-0"
      class="MuiGrid-root TabPanel MuiGrid-item"
      heading="Tab 1"
      id="tabpanel-0"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-8 TabPanelBox"
      >
        Content One
      </div>
    </div>
    <div
      aria-labelledby="tab-1"
      class="MuiGrid-root TabPanel MuiGrid-item"
      heading="Tab 2"
      hidden=""
      id="tabpanel-1"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-9 TabPanelBox"
      >
        Content Two
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs component renders correctly when one tab is false 1`] = `
<div>
  <div
    class="Tabs Tabs--primary"
  >
    <div
      class="TabsBar"
    >
      <div
        class="Container"
      >
        <div
          class="MuiContainer-root tabStyles-ContainerRoot-28 MuiContainer-maxWidthXl"
        >
          <div
            class="MuiTabs-root tabStyles-TabsRoot-29"
          >
            <div
              class="MuiTabs-scrollable"
              style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
            />
            <div
              class="MuiTabs-scroller MuiTabs-scrollable"
              style="margin-bottom: 0px;"
            >
              <div
                aria-label="tabs"
                class="MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="tabpanel-0"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary tabStyles-TabRoot-30 Mui-selected"
                  id="tab-0"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    Tab 1
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
              <span
                class="PrivateTabIndicator-root-31 PrivateTabIndicator-colorPrimary-32 MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-0"
      class="MuiGrid-root TabPanel MuiGrid-item"
      heading="Tab 1"
      id="tabpanel-0"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-35 TabPanelBox"
      >
        Content One
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs component renders correctly when visibleUntil is set to md  1`] = `
<div>
  <div
    class="Tabs Tabs--primary Tabs--visible-until-md"
  >
    <div
      class="TabsBar"
    >
      <div
        class="Container"
      >
        <div
          class="MuiContainer-root tabStyles-ContainerRoot-36 MuiContainer-maxWidthXl"
        >
          <div
            class="MuiTabs-root tabStyles-TabsRoot-37"
          >
            <div
              class="MuiTabs-scrollable"
              style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
            />
            <div
              class="MuiTabs-scroller MuiTabs-scrollable"
              style="margin-bottom: 0px;"
            >
              <div
                aria-label="tabs"
                class="MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="tabpanel-0"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary tabStyles-TabRoot-38 Mui-selected"
                  id="tab-0"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    Tab 1
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-controls="tabpanel-1"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary tabStyles-TabRoot-38"
                  id="tab-1"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    Tab 2
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
              <span
                class="PrivateTabIndicator-root-39 PrivateTabIndicator-colorPrimary-40 MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-0"
      class="MuiGrid-root TabPanel MuiGrid-item"
      heading="Tab 1"
      id="tabpanel-0"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-43 TabPanelBox"
      >
        Content One
      </div>
    </div>
    <div
      aria-labelledby="tab-1"
      class="MuiGrid-root TabPanel MuiGrid-item"
      heading="Tab 2"
      hidden=""
      id="tabpanel-1"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-44 TabPanelBox"
      >
        Content Two
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs component renders correctly when visibleUntil is set to sm  1`] = `
<div>
  <div
    class="Tabs Tabs--primary Tabs--visible-until-sm"
  >
    <div
      class="TabsBar"
    >
      <div
        class="Container"
      >
        <div
          class="MuiContainer-root tabStyles-ContainerRoot-45 MuiContainer-maxWidthXl"
        >
          <div
            class="MuiTabs-root tabStyles-TabsRoot-46"
          >
            <div
              class="MuiTabs-scrollable"
              style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
            />
            <div
              class="MuiTabs-scroller MuiTabs-scrollable"
              style="margin-bottom: 0px;"
            >
              <div
                aria-label="tabs"
                class="MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="tabpanel-0"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary tabStyles-TabRoot-47 Mui-selected"
                  id="tab-0"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    Tab 1
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-controls="tabpanel-1"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary tabStyles-TabRoot-47"
                  id="tab-1"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    Tab 2
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
              <span
                class="PrivateTabIndicator-root-48 PrivateTabIndicator-colorPrimary-49 MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-0"
      class="MuiGrid-root TabPanel MuiGrid-item"
      heading="Tab 1"
      id="tabpanel-0"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-52 TabPanelBox"
      >
        Content One
      </div>
    </div>
    <div
      aria-labelledby="tab-1"
      class="MuiGrid-root TabPanel MuiGrid-item"
      heading="Tab 2"
      hidden=""
      id="tabpanel-1"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-53 TabPanelBox"
      >
        Content Two
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs component renders secondary theme correctly 1`] = `
<div>
  <div
    class="Tabs Tabs--secondary"
  >
    <div
      class="TabsBar"
    >
      <div
        class="Container"
      >
        <div
          class="MuiContainer-root tabStyles-ContainerRoot-10 MuiContainer-maxWidthXl"
        >
          <div
            class="MuiTabs-root tabStyles-TabsRoot-11"
          >
            <div
              class="MuiTabs-scrollable"
              style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
            />
            <div
              class="MuiTabs-scroller MuiTabs-scrollable"
              style="margin-bottom: 0px;"
            >
              <div
                aria-label="tabs"
                class="MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="tabpanel-0"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary tabStyles-TabRoot-12 Mui-selected"
                  id="tab-0"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    Tab 1
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-controls="tabpanel-1"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary tabStyles-TabRoot-12"
                  id="tab-1"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    Tab 2
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
              <span
                class="PrivateTabIndicator-root-13 PrivateTabIndicator-colorPrimary-14 MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-0"
      class="MuiGrid-root TabPanel MuiGrid-item"
      heading="Tab 1"
      id="tabpanel-0"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-17 TabPanelBox"
      >
        Content One
      </div>
    </div>
    <div
      aria-labelledby="tab-1"
      class="MuiGrid-root TabPanel MuiGrid-item"
      heading="Tab 2"
      hidden=""
      id="tabpanel-1"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-18 TabPanelBox"
      >
        Content Two
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs component triggers onChange 1`] = `
Array [
  Array [
    "tabTwo",
  ],
]
`;
